[build-system]
requires = [
    "poetry-core",
    "Cython",
    "numpy",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zigzag"
version = "0.3.2"
readme = "README.md"
homepage = "https://github.com/jbn/ZigZag"
repository = "https://github.com/jbn/ZigZag"
description = "Package for finding peaks and valleys of time series."
authors = ["generativist <jbn@abreka.com>"]
license = "BSD-3-Clause"
packages = [{ include = "zigzag" }]
include = [
    { path = "zigzag/**/*.so", format = "wheel" },
    { path = "zigzag/**/*.pyx" },
    { path = "zigzag/**/*.pyd" },
    "CHANGES.txt"
]

[tool.poetry.dependencies]
python = "^3.11"
cython = "^3.0.11"
numpy = "^2.2.0"
pandas = "^2.2.3"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pandas = "^2.2.3"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
